@@ -156,6 +156,7 @@ our %EXPORT_TAGS = (
 				       set_global_variables
 				       create_netfilter_load
 				       create_chainlist_reload
+				       create_stop_load
 				       $section
 				       %sections
 				       %targets
@@ -2970,6 +2971,99 @@ sub create_chainlist_reload($) {
     pop_indent;
 
     emit "}\n";
+}
+
+#
+# Generate the netfilter input to stop the firewall
+#
+sub create_stop_load( $ ) {
+    my $test = shift;
+
+    my @table_list;
+
+    if ( $family == F_IPV4 ) {
+	push @table_list, 'raw'    if $capabilities{RAW_TABLE};
+	push @table_list, 'nat'    if $capabilities{NAT_ENABLED};
+	push @table_list, 'mangle' if $capabilities{MANGLE_ENABLED} && $config{MANGLE_ENABLED};
+	push @table_list, 'filter';
+    } else {
+	@table_list = qw( raw mangle filter );
+    }
+
+    $mode = NULL_MODE;
+
+    my $utility = $family == F_IPV4 ? 'iptables-restore' : 'ip6tables-restore';
+    my $UTILITY = $family == F_IPV4 ? 'IPTABLES_RESTORE' : 'IP6TABLES_RESTORE';
+
+    emit '';
+
+    emit "exec 3>\${VARDIR}/.${utility}-stop-input";
+
+    enter_cat_mode;
+
+    my $date = localtime;
+
+    unless ( $test ) {
+	emit_unindented '#';
+	emit_unindented "# Generated by Shorewall-perl $globals{VERSION} - $date";
+	emit_unindented '#';
+    }
+
+    for my $table ( @table_list ) {
+	emit_unindented "*$table";
+
+	my @chains;
+	#
+	# iptables-restore seems to be quite picky about the order of the builtin chains
+	#
+	for my $chain ( @builtins ) {
+	    my $chainref = $chain_table{$table}{$chain};
+	    if ( $chainref ) {
+		assert( $chainref->{cmdlevel} == 0 );
+		emit_unindented ":$chain $chainref->{policy} [0:0]";
+		push @chains, $chainref;
+	    }
+	}
+	#
+	# First create the chains in the current table
+	#
+	for my $chain ( grep $chain_table{$table}{$_}->{referenced} , ( sort keys %{$chain_table{$table}} ) ) {
+	    my $chainref =  $chain_table{$table}{$chain};
+	    unless ( $chainref->{builtin} ) {
+		assert( $chainref->{cmdlevel} == 0 );
+		emit_unindented ":$chainref->{name} - [0:0]";
+		push @chains, $chainref;
+	    }
+	}
+	#
+	# Then emit the rules
+	#
+	for my $chainref ( @chains ) {
+	    emitr $chainref->{name}, $_ for ( grep defined $_, @{$chainref->{rules}} );
+	}
+	#
+	# Commit the changes to the table
+	#
+	enter_cat_mode unless $mode == CAT_MODE;
+	emit_unindented 'COMMIT';
+    }
+
+    enter_cmd_mode;
+    #
+    # Now generate the actual ip[6]tables-restore command
+    #
+    emit(  'exec 3>&-',
+	   '',
+	   '[ -n "$DEBUG" ] && command=debug_restore_input || command=$' . $UTILITY,
+	   '',
+	   'progress_message2 "Running $command..."',
+	   '',
+	   "cat \${VARDIR}/.${utility}-stop-input | \$command # Use this nonsensical form to appease SELinux",
+	   'if [ $? != 0 ]; then',
+	   qq(    fatal_error "$command Failed. Input is in \${VARDIR}/.${utility}-stop-input"),
+	   "fi\n"
+	   );
+
 }
 
 1;
