@@ -516,13 +516,6 @@ EOF
 
     emit "}\n";
 
-    unless ( $test ) {
-	if ( $family == F_IPV4 ) {
-	    copy $globals{SHAREDIRPL} . 'prog.footer';
-	} else {
-	    copy $globals{SHAREDIRPL} . 'prog.footer6';
-	}
-    }
 }
 
 #
@@ -805,7 +798,17 @@ sub compiler {
 	#                               S T O P _ F I R E W A L L
 	#             (Writes the stop_firewall() function to the compiled script)
 	#
-	compile_stop_firewall;
+	compile_stop_firewall( $test );
+	#
+	# Copy the footer to the object
+	#
+	unless ( $test ) {
+	    if ( $family == F_IPV4 ) {
+		copy $globals{SHAREDIRPL} . 'prog.footer';
+	    } else {
+		copy $globals{SHAREDIRPL} . 'prog.footer6';
+	    }
+	}
 	#
 	# Close, rename and secure the object
 	#
