@@ -10,6 +10,8 @@ Changes in Shorewall 4.3.8
 
 5) Suppress leading whitespace on certain continuation lines.
 
+6) Use iptables[6]-restore to stop the firewall.
+
 Changes in Shorewall 4.3.7
 
 1)  Fix forward treatment of interface options.
